fix: resolve mobile view kanban overflow

--- a/src/views/Kanban/Kanban.module.css
+++ b/src/views/Kanban/Kanban.module.css
@@ -22,5 +22,7 @@
 @media screen and (max-width: 768px) {
   .kanban {
     flex-direction: column;
+    max-height: 80vh;
+    overflow: scroll;
   }
 }
